# stringlet

./: .gitignore  Cargo.toml  README.md
.cargo/: mutants.toml
.devin/: wiki.json
src/: cmp.rs  error.rs  fmt.rs  impl_for.rs  lib.rs  macros.rs  methods.rs  new.rs  prelude.rs  refs.rs  repr.rs  traits.rs  workaround.rs
tests/: cmp.rs  methods.rs  new.rs  refs.rs  traits.rs
